--- a/index.html
+++ b/index.html
@@ -3,34 +3,26 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Reclaimed Ritual</title>
+<title>gnawed</title>
 
-<!-- Google Font -->
 <link href="https://fonts.googleapis.com/css2?family=Eater&display=swap" rel="stylesheet">
 
 <style>
 
-/* ---------------- BASE ---------------- */
-
 body {
     margin: 0;
-    background: #0f0f0f;
-    color: #f5f5f5;
+    background: #f9f9f9;
+    color: #111;
     font-family: 'Eater', cursive;
     overflow-x: hidden;
 }
 
-a {
-    text-decoration: none;
-    color: inherit;
-}
-
-/* subtle stitched page border */
+/* stitched page border */
 body::before {
     content: "";
     position: fixed;
-    inset: 8px;
-    border: 2px dashed #444;
+    inset: 10px;
+    border: 2px dashed #b30000;
     pointer-events: none;
 }
 
@@ -40,78 +32,61 @@ body::before {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    padding: 14px 25px;
-    border-bottom: 1px solid #333;
-    position: relative;
+    padding: 18px 30px;
+    border-bottom: 2px dashed #b30000;
 }
 
-.brand {
-    display: flex;
-    align-items: center;
-    gap: 12px;
-    margin-left: 20px;
-}
-
-.brand img {
-    width: 50px;
-    height: auto;
-}
-
-.brand-name {
-    font-size: 28px;
-    letter-spacing: 2px;
-}
-
-/* icons */
-.icons {
-    display: flex;
-    gap: 20px;
-    font-size: 22px;
-    align-items: center;
-}
-
-/* hamburger */
 .hamburger {
     font-size: 26px;
     cursor: pointer;
+}
+
+.brand {
+    font-size: 30px;
+    letter-spacing: 3px;
+    margin-left: 20px;
+}
+
+.icons {
+    display: flex;
+    gap: 18px;
+    font-size: 22px;
 }
 
 /* ---------------- SIDEBAR ---------------- */
 
 .sidebar {
     position: fixed;
-    left: -240px;
+    left: -220px;
     top: 0;
-    width: 240px;
+    width: 220px;
     height: 100%;
-    background: #161616;
+    background: white;
     padding-top: 80px;
     transition: 0.4s;
-    border-right: 2px dashed #444;
+    border-right: 2px dashed #b30000;
     z-index: 10;
 }
 
 .sidebar a {
     display: block;
     padding: 18px 25px;
-    border-bottom: 1px solid #222;
-    transition: 0.3s;
+    border-bottom: 1px solid #eee;
+    color: #111;
 }
 
 .sidebar a:hover {
-    background: #2a2a2a;
-    color: #d47d91;
+    background: #ffe6e6;
 }
 
 .sidebar.active {
     left: 0;
 }
 
-/* overlay */
 .overlay {
     position: fixed;
     inset: 0;
-    background: rgba(0,0,0,0.6);
+    background: rgba(0,0,0,0.2);
     display: none;
     z-index: 5;
 }
@@ -124,31 +99,33 @@ body::before {
 
 .hero {
     text-align: center;
-    padding: 100px 20px 60px;
-    position: relative;
+    padding: 60px 20px 20px;
 }
 
-.hero h1 {
-    font-size: 38px;
-    margin-bottom: 10px;
+/* BIG MASCOT */
+.hero img {
+    width: 280px;
+    max-width: 90%;
+    margin-bottom: 20px;
 }
 
-.hero p {
-    font-size: 16px;
-    opacity: 0.7;
+/* tagline */
+.tagline {
+    font-size: 20px;
+    color: #b30000;
+    margin-bottom: 40px;
 }
 
-/* ---------------- FEATURE BOX ---------------- */
+/* rotating feature box */
 
 .feature-box {
     width: 260px;
-    margin: 60px auto;
-    padding: 30px;
-    border: 2px dashed #555;
-    background: #1a1a1a;
+    margin: 0 auto 60px;
+    padding: 25px;
+    border: 2px dashed #b30000;
+    background: white;
     position: relative;
-    overflow: hidden;
-    min-height: 140px;
+    min-height: 120px;
 }
 
 .feature-item {
@@ -162,31 +139,31 @@ body::before {
     opacity: 1;
 }
 
-/* ---------------- DECORATIVE ELEMENTS ---------------- */
+/* decorative red scribble lines */
 
-.corner-heart {
-    position: fixed;
-    bottom: 20px;
-    right: 25px;
-    font-size: 26px;
-    opacity: 0.5;
-}
-
-.scribble {
+.scribble-left {
     position: absolute;
-    width: 80px;
-    height: 80px;
-    border: 1px dashed #333;
-    transform: rotate(20deg);
-    top: 30%;
-    left: 10%;
+    left: 20px;
+    top: 40%;
+    width: 60px;
+    height: 60px;
+    border: 1px dashed #b30000;
+    transform: rotate(25deg);
 }
 
-/* ---------------- RESPONSIVE ---------------- */
+.scribble-right {
+    position: absolute;
+    right: 20px;
+    top: 60%;
+    width: 60px;
+    height: 60px;
+    border: 1px dashed #b30000;
+    transform: rotate(-25deg);
+}
 
-@media(max-width: 768px) {
-    .brand-name {
-        font-size: 20px;
+@media(max-width:768px){
+    .brand{
+        font-size:22px;
     }
 }
 
@@ -206,36 +183,30 @@ body::before {
 
 <div class="topbar">
     <div class="hamburger" onclick="openMenu()">☰</div>
-
-    <div class="brand">
-        <img src="mascot.png" alt="Mascot">
-        <div class="brand-name">Reclaimed Ritual</div>
-    </div>
-
+    <div class="brand">gnawed</div>
     <div class="icons">
         <span>♡</span>
         <span>👜</span>
-        <a href="about.html">?</a>
+        <span>?</span>
     </div>
 </div>
 
 <div class="hero">
-    <h1>Soft gothic. Hand-altered. One-of-one.</h1>
-    <p>Romantic chaos stitched by hand.</p>
+    <img src="mascot.png" alt="Mascot">
+    <div class="tagline">soft gothic. hand altered. one of one.</div>
 </div>
 
 <div class="feature-box">
-    <div class="feature-item active">Layered lace skirts</div>
-    <div class="feature-item">Hand-altered dresses</div>
-    <div class="feature-item">Reworked statement tops</div>
-    <div class="feature-item">Patchwork accessories</div>
+    <div class="feature-item active">lace skirts</div>
+    <div class="feature-item">reworked dresses</div>
+    <div class="feature-item">altered tops</div>
+    <div class="feature-item">patchwork accessories</div>
 </div>
 
-<div class="corner-heart">♥</div>
+<div class="scribble-left"></div>
+<div class="scribble-right"></div>
 
 <script>
-
-/* SIDEBAR */
 
 function openMenu(){
     document.getElementById("sidebar").classList.add("active");
@@ -246,8 +217,6 @@ function closeMenu(){
     document.getElementById("sidebar").classList.remove("active");
     document.querySelector(".overlay").classList.remove("active");
 }
-
-/* FEATURE FADE */
 
 let items = document.querySelectorAll(".feature-item");
 let index = 0;
