--- a/index.html
+++ b/index.html
@@ -8,23 +8,132 @@
 <link href="https://fonts.googleapis.com/css2?family=Eater&display=swap" rel="stylesheet">
 
 <style>
-
 body {
-    margin: 0;
-    background: #f9f9f9;
-    color: #111;
-    font-family: 'Eater', cursive;
-    overflow-x: hidden;
+  margin: 0;
+  background: #0a0a0a;
+  color: white;
+  font-family: 'Helvetica Neue', sans-serif;
+  overflow-x: hidden;
 }
 
-/* stitched page border */
-body::before {
-    content: "";
-    position: fixed;
-    inset: 10px;
-    border: 2px dashed #b30000;
-    pointer-events: none;
+/* HEADER */
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 25px 60px;
 }
+
+nav a {
+  margin: 0 20px;
+  text-decoration: none;
+  color: white;
+  font-size: 14px;
+  letter-spacing: 2px;
+  transition: opacity 0.3s ease;
+}
+
+nav a:hover {
+  opacity: 0.6;
+}
+
+.cart {
+  cursor: pointer;
+  transition: transform 0.3s ease;
+}
+
+.cart:hover {
+  transform: scale(1.1);
+}
+
+/* HERO SECTION */
+.hero {
+  text-align: center;
+  margin-top: 60px;
+  position: relative;
+}
+
+/* Bigger mascot */
+.mascot {
+  width: 420px;
+  animation: float 4s ease-in-out infinite;
+  filter: drop-shadow(0 0 25px rgba(255,0,0,0.25));
+}
+
+/* Floating animation */
+@keyframes float {
+  0% { transform: translateY(0px); }
+  50% { transform: translateY(-15px); }
+  100% { transform: translateY(0px); }
+}
+
+h1 {
+  margin-top: 40px;
+  font-size: 48px;
+  letter-spacing: 6px;
+  font-weight: 300;
+}
+
+/* Button */
+.shop-btn {
+  margin-top: 30px;
+  padding: 12px 40px;
+  background: transparent;
+  border: 1px solid white;
+  color: white;
+  letter-spacing: 3px;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.shop-btn:hover {
+  background: white;
+  color: black;
+}
+
+/* Decorative Line */
+.decor {
+  margin-top: 100px;
+  display: flex;
+  justify-content: center;
+}
+
+.line {
+  width: 80%;
+  height: 1px;
+  background: linear-gradient(to right, transparent, white, transparent);
+}
+<body>
+
+<header>
+  <div class="logo">𖤐</div>
+
+  <nav>
+    <a href="#">Shop</a>
+    <a href="#">Archive</a>
+    <a href="#">Contact</a>
+  </nav>
+
+  <div class="cart">
+    <!-- Bag Outline SVG -->
+    <svg width="26" height="26" viewBox="0 0 24 24" fill="none" stroke="white" stroke-width="1.5">
+      <path d="M6 8h12l-1 12H7L6 8z"/>
+      <path d="M9 8V6a3 3 0 016 0v2"/>
+    </svg>
+  </div>
+</header>
+
+<section class="hero">
+  <img src="mascot.png" class="mascot">
+  <h1>NEW COLLECTION</h1>
+  <button class="shop-btn">ENTER</button>
+</section>
+
+<section class="decor">
+  <div class="line"></div>
+</section>
+
+</body>
 
 /* ---------------- TOP BAR ---------------- */
 
